fix: configurar CORS para Vercel y corregir formato de URL JDBC